# src/app/Swagger/swagger.json
@@ -1,3 +1,4 @@
+
 {
   "openapi": "3.0.1",
   "info": {
@@ -1179,6 +1180,46 @@
                 "schema": {
                   "type": "number",
                   "format": "double"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/total/joueur/{id}/match/{matchId}": {
+      "get": {
+        "tags": [
+          "total-controller"
+        ],
+        "operationId": "total",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          },
+          {
+            "name": "matchId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TotalDTO"
                 }
               }
             }
@@ -2443,6 +2484,55 @@
               "type": "integer",
               "format": "int64"
             }
+          }
+        }
+      },
+      "TotalDTO": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "totalPoints": {
+            "type": "number",
+            "format": "double"
+          },
+          "totalRebonds": {
+            "type": "number",
+            "format": "double"
+          },
+          "totalPasseD": {
+            "type": "number",
+            "format": "double"
+          },
+          "totalContre": {
+            "type": "number",
+            "format": "double"
+          },
+          "totalInterception": {
+            "type": "number",
+            "format": "double"
+          },
+          "pourcentageDeuxPts": {
+            "type": "number",
+            "format": "double"
+          },
+          "pourcentageTroisPts": {
+            "type": "number",
+            "format": "double"
+          },
+          "pourcentageLF": {
+            "type": "number",
+            "format": "double"
+          },
+          "pourcentage": {
+            "type": "number",
+            "format": "double"
+          },
+          "statsId": {
+            "type": "integer",
+            "format": "int64"
           }
         }
       }
