# src/app/services/models/total-dto.ts
@@ -1,0 +1,15 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface TotalDto {
+  id?: number;
+  pourcentage?: number;
+  pourcentageDeuxPts?: number;
+  pourcentageLF?: number;
+  pourcentageTroisPts?: number;
+  statsId?: number;
+  totalContre?: number;
+  totalInterception?: number;
+  totalPasseD?: number;
+  totalPoints?: number;
+  totalRebonds?: number;
+}
